2009-03-24  Lars Hartmann  <lars (at) chaotika (dot) org>

	* test/02_lpatom_parse.c: fixed compiler warning due to missing
	include.

2009-03-22  Lars Hartmann  <lars (at) chaotika (dot) org>

	* TODO: updated.

	* doc/binary_packages.txt: added.

	* replace/strndup.c: fixed compiler error.

2009-03-21  Lars Hartmann  <lars (at) chaotika (dot) org>

	* doc/Requirements.txt: updated.

2009-03-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added test for lputil_intlen():
	* test/Makefile.am: added 01_lputil_intlen.
	* test/01_lputil_intlen.c: added.

	Added test for lputil_splitstr():
	* test/Makefile.am: added 01_lputil_splitstr.
	* test/01_lputil_splitstr.c: added.

2009-03-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	Renamed tests:
	* test/02_lpxpak_parse.c: renamed to test/03_lpxpak.c.
	* test/02_lpxpak_parse.tbz2: renamed to test/03_lpxpak.tbz2.
	* test/01_lpatom_parse.c: renamed to test/02_lpatom_parse.c.
	* test/01_lpatom_parse.txt: renamed to test/02_lpatom_parse.txt.

	* src/liblputil.c (lputil_splitstr): rewritten with strstr instead
	of strtok.

	* test/01_lpatom_parse.c (main): fixed identing.

2009-03-18  Lars Hartmann  <lars (at) chaotika (dot) org>

	* include/util.h: removed lputil_strndup.
	* src/liblputil.c: removed lputil_strndup.

2009-03-17  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added replacement function for strndup:
	* replace/strndup.c: added.
	* replace/Makefile.am: added.
	* configure.ac: added replacement-test for strndup
	* Makefile.am (SUBDIRS): added path to replacement lib.
	* src/Makefile.am (libportage_la_LIBADD): added replacement lib.

	Cleaned up Build Framework:
	* Makefile.am (SUBDIRS): renamed t to test
	* configure.ac (AC_CONFIG_AUX_DIR): changed to put most config
	files into config/.
	(AC_CONFIG_FILES): renamed t to test.
	removed unnecessary header checks.
	* t: renamed to test.
	* acinclude.m4: set default DOXYGEN settings.

2009-03-16  Lars Hartmann  <lars (at) chaotika (dot) org>
